fixed alignment of edu questions

--- a/startbootstrap-creative-gh-pages/css/creative.css
+++ b/startbootstrap-creative-gh-pages/css/creative.css
@@ -215,7 +215,7 @@ header.masthead p {
 }
 
 .service-box {
-  max-width: 400px;
+  width: 400px;
 }
 
 .portfolio-box {
